# maze

./: CLAUDE.md  Cargo.toml  LOG.md
.github/workflows/: ci.yml
maze-core/: Cargo.toml
maze-core/src/: floor.rs  game.rs  generator.rs  lib.rs  maze.rs  render.rs
maze-terminal/: Cargo.toml
maze-terminal/src/: main.rs  renderer.rs
maze-web/: Cargo.toml
maze-web/src/: lib.rs  renderer.rs
openspec/changes/add-maze-algorithms/: design.md  proposal.md  tasks.md
openspec/changes/add-timer/: proposal.md
openspec/changes/archive/2026-04-05-add-timer/: design.md  tasks.md
openspec/changes/archive/2026-04-05-maze-game/: design.md  tasks.md
openspec/changes/archive/2026-04-06-add-rooms/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-06-chain-mazes/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-code-quality-cleanup/: design.md  proposal.md  tasks.md
openspec/changes/maze-game/: proposal.md  tasks.md
openspec/changes/wasm-web-version/: README.md  design.md  proposal.md  tasks.md
openspec/specs/countdown-timer/: spec.md
openspec/specs/draw-command/: spec.md
openspec/specs/floor-generation/: spec.md
openspec/specs/game-loop/: spec.md
openspec/specs/github-pages-deploy/: spec.md
openspec/specs/maze-chaining/: spec.md
openspec/specs/maze-generation/: spec.md
openspec/specs/maze-neighbors/: spec.md
openspec/specs/room-modifier/: spec.md
openspec/specs/terminal-rendering/: spec.md
src/: game.rs  generator.rs  main.rs  maze.rs  renderer.rs
web/: index.html
(+19 files in other folders)
