[package]
name = "maze-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_v03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
