[package]
name = "maze-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
maze-core = { path = "../maze-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = "0.10.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "EventTarget",
    "Performance",
]

[dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]
